[gd_scene load_steps=12 format=2]

[ext_resource path="res://Scripts/Walls.gd" type="Script" id=1]
[ext_resource path="res://Scripts/Tutorial.gd" type="Script" id=2]
[ext_resource path="res://Scripts/Blood_spawn.gd" type="Script" id=3]
[ext_resource path="res://Assets/Pictures/background.png" type="Texture" id=4]
[ext_resource path="res://Assets/Ubuntu-Regular.ttf" type="DynamicFontData" id=5]
[ext_resource path="res://Assets/Pictures/Square.png" type="Texture" id=6]
[ext_resource path="res://Assets/Pictures/WSAD.png" type="Texture" id=7]
[ext_resource path="res://Scripts/Health.gd" type="Script" id=8]
[ext_resource path="res://Assets/Sounds/Magician Lord - Stage 3 Music Highway Leading to a Foreign Space.mp3" type="AudioStream" id=9]
[ext_resource path="res://Assets/Pictures/bloodcell.png" type="Texture" id=10]

[sub_resource type="DynamicFont" id=3]
size = 32
font_data = ExtResource( 5 )

[node name="Tutorial" type="Node2D"]
pause_mode = 1
script = ExtResource( 2 )

[node name="Walls" type="Node" parent="."]
script = ExtResource( 1 )

[node name="Bloodcell Spawner" type="Node" parent="."]
script = ExtResource( 3 )

[node name="Enemy_spawn_timer" type="Timer" parent="."]
wait_time = 2.0

[node name="Immunity_timer" type="Timer" parent="."]
wait_time = 3.0

[node name="Tutorial_timer" type="Timer" parent="."]
wait_time = 2.0
one_shot = true

[node name="Sprite" type="Sprite" parent="."]
position = Vector2( 454, 347 )
scale = Vector2( 5.77266, 7.7375 )
z_index = -100
texture = ExtResource( 4 )
__meta__ = {
"_edit_lock_": true
}

[node name="UI" type="Node2D" parent="."]
z_index = 20

[node name="Control" type="Control" parent="UI"]
margin_top = -1.0
margin_right = 1024.0
margin_bottom = 599.0
__meta__ = {
"_edit_lock_": true
}

[node name="Health" type="Label" parent="UI/Control"]
margin_left = 24.0
margin_top = 214.0
margin_right = 174.0
margin_bottom = 264.0
rect_rotation = -90.0
custom_fonts/font = SubResource( 3 )
text = "  Health: 3"
valign = 1
script = ExtResource( 8 )

[node name="ImmunityPBar" type="TextureProgress" parent="UI/Control"]
margin_left = 40.0
margin_top = 484.0
margin_right = 56.0
margin_bottom = 500.0
rect_scale = Vector2( 1.375, 13.563 )
value = 50.0
texture_under = ExtResource( 6 )
texture_progress = ExtResource( 6 )
fill_mode = 3
tint_under = Color( 0.972549, 0.286275, 0.286275, 1 )
tint_progress = Color( 0.00392157, 0.705882, 0.690196, 1 )

[node name="InfectionPBar" type="TextureProgress" parent="UI/Control"]
margin_left = 38.0
margin_top = 214.0
margin_right = 54.0
margin_bottom = 230.0
rect_scale = Vector2( 1.375, 13.563 )
value = 57.0
texture_under = ExtResource( 6 )
texture_progress = ExtResource( 6 )
fill_mode = 3
tint_under = Color( 0.972549, 0.286275, 0.286275, 1 )
tint_progress = Color( 0.0901961, 0.705882, 0.00392157, 1 )

[node name="Immunity" type="Label" parent="UI/Control"]
modulate = Color( 0, 0, 0, 1 )
self_modulate = Color( 0, 0, 0, 1 )
margin_left = 41.0
margin_top = 712.0
margin_right = 258.0
margin_bottom = 734.0
rect_rotation = -89.9503
text = "Immunity"
align = 1
valign = 1

[node name="Infection" type="Label" parent="UI/Control"]
modulate = Color( 0, 0, 0, 1 )
self_modulate = Color( 0, 0, 0, 1 )
margin_left = 38.0
margin_top = 429.0
margin_right = 250.0
margin_bottom = 451.0
rect_rotation = -89.9503
text = "Infection"
align = 1
valign = 1

[node name="bgm" type="AudioStreamPlayer" parent="."]
pause_mode = 2
stream = ExtResource( 9 )
autoplay = true
bus = "Music"

[node name="Layer" type="ParallaxBackground" parent="."]
pause_mode = 2
layer = 128

[node name="Pause_Menu" type="VBoxContainer" parent="Layer"]
pause_mode = 2
margin_left = 462.0
margin_top = 300.0
margin_right = 544.0
margin_bottom = 368.0
__meta__ = {
"_edit_lock_": true
}

[node name="Unpause" type="Button" parent="Layer/Pause_Menu"]
pause_mode = 2
margin_right = 82.0
margin_bottom = 20.0
text = "Unpause"

[node name="Audio" type="Button" parent="Layer/Pause_Menu"]
margin_top = 24.0
margin_right = 82.0
margin_bottom = 44.0
text = "Audio"

[node name="Menu" type="Button" parent="Layer/Pause_Menu"]
pause_mode = 2
margin_top = 48.0
margin_right = 82.0
margin_bottom = 68.0
text = "Quit Game"

[node name="Quit" type="Button" parent="Layer/Pause_Menu"]
pause_mode = 2
margin_top = 72.0
margin_right = 82.0
margin_bottom = 92.0
text = "Menu"

[node name="Tutorial1" type="Control" parent="Layer"]
margin_left = 1504.0
margin_right = 1982.0
margin_bottom = 320.0

[node name="Fundo" type="Sprite" parent="Layer/Tutorial1"]
modulate = Color( 0.196078, 0.192157, 0.192157, 1 )
scale = Vector2( 30, 20 )
texture = ExtResource( 6 )
centered = false
__meta__ = {
"_edit_lock_": true
}

[node name="Texto" type="Label" parent="Layer/Tutorial1"]
margin_right = 478.0
margin_bottom = 196.0
text = "VIRUS RAID:

Bem vindo ao Tutorial!"
align = 1
valign = 1
__meta__ = {
"_edit_lock_": true
}

[node name="Continue" type="Button" parent="Layer/Tutorial1"]
margin_left = 200.0
margin_top = 270.0
margin_right = 269.0
margin_bottom = 290.0
text = "Continue"
__meta__ = {
"_edit_lock_": true
}

[node name="Tutorial2" type="Control" parent="Layer"]
margin_left = 2029.0
margin_right = 2507.0
margin_bottom = 320.0

[node name="Fundo" type="Sprite" parent="Layer/Tutorial2"]
modulate = Color( 0.196078, 0.192157, 0.192157, 1 )
scale = Vector2( 30, 20 )
texture = ExtResource( 6 )
centered = false
__meta__ = {
"_edit_lock_": true
}

[node name="Texto" type="Label" parent="Layer/Tutorial2"]
margin_right = 478.0
margin_bottom = 147.0
text = "MOVIMENTAÇÃO:

Utilize as teclas W, A, S, D para se movimentar pela tela."
align = 1
valign = 1
__meta__ = {
"_edit_lock_": true
}

[node name="Continue" type="Button" parent="Layer/Tutorial2"]
margin_left = 200.0
margin_top = 270.0
margin_right = 269.0
margin_bottom = 290.0
text = "Continue"
__meta__ = {
"_edit_lock_": true
}

[node name="Imagem" type="Sprite" parent="Layer/Tutorial2"]
position = Vector2( 233, 196 )
scale = Vector2( 0.649306, 0.526738 )
texture = ExtResource( 7 )

[node name="Tutorial3" type="Control" parent="Layer"]
margin_left = 2569.0
margin_top = -1.0
margin_right = 3047.0
margin_bottom = 319.0

[node name="Fundo" type="Sprite" parent="Layer/Tutorial3"]
modulate = Color( 0.196078, 0.192157, 0.192157, 1 )
scale = Vector2( 30, 20 )
texture = ExtResource( 6 )
centered = false
__meta__ = {
"_edit_lock_": true
}

[node name="Texto" type="Label" parent="Layer/Tutorial3"]
margin_right = 478.0
margin_bottom = 196.0
text = "COMBATE:

Clique em um ponto da tela com o botão esquerdo do mouse
 para atirar em sua direção."
align = 1
valign = 1
__meta__ = {
"_edit_lock_": true
}

[node name="Continue" type="Button" parent="Layer/Tutorial3"]
margin_left = 200.0
margin_top = 270.0
margin_right = 269.0
margin_bottom = 290.0
text = "Continue"
__meta__ = {
"_edit_lock_": true
}

[node name="Tutorial4" type="Control" parent="Layer"]
margin_left = 3106.0
margin_right = 3584.0
margin_bottom = 320.0

[node name="Fundo" type="Sprite" parent="Layer/Tutorial4"]
modulate = Color( 0.196078, 0.192157, 0.192157, 1 )
scale = Vector2( 30, 20 )
texture = ExtResource( 6 )
centered = false
__meta__ = {
"_edit_lock_": true
}

[node name="Texto" type="Label" parent="Layer/Tutorial4"]
margin_right = 478.0
margin_bottom = 196.0
text = "COMBATE:

Sua barra de vida está localizada no canto superior esquerdo."
align = 1
valign = 1
__meta__ = {
"_edit_lock_": true
}

[node name="Continue" type="Button" parent="Layer/Tutorial4"]
margin_left = 200.0
margin_top = 270.0
margin_right = 269.0
margin_bottom = 290.0
text = "Continue"
__meta__ = {
"_edit_lock_": true
}

[node name="Tutorial5" type="Control" parent="Layer"]
margin_left = 1502.0
margin_top = 368.0
margin_right = 1980.0
margin_bottom = 688.0

[node name="Fundo" type="Sprite" parent="Layer/Tutorial5"]
modulate = Color( 0.196078, 0.192157, 0.192157, 1 )
scale = Vector2( 30, 20 )
texture = ExtResource( 6 )
centered = false
__meta__ = {
"_edit_lock_": true
}

[node name="Texto" type="Label" parent="Layer/Tutorial5"]
margin_right = 478.0
margin_bottom = 196.0
text = "IMUNIDADE:

Com o tempo, o hospedeiro desenvolverá imunidade a seu vírus. 
A imunidade é representada pela barra azul no canto inferior
 esquerdo.

Caso a imunidade chegue a 100%, você será derrotado.

Destrua as hemácias para retardar a imunidade."
align = 1
valign = 1
__meta__ = {
"_edit_lock_": true
}

[node name="Continue" type="Button" parent="Layer/Tutorial5"]
margin_left = 200.0
margin_top = 270.0
margin_right = 269.0
margin_bottom = 290.0
text = "Continue"
__meta__ = {
"_edit_lock_": true
}

[node name="Imagem" type="Sprite" parent="Layer/Tutorial5"]
position = Vector2( 234, 233 )
scale = Vector2( 0.356704, 0.310737 )
texture = ExtResource( 10 )

[node name="Tutorial6" type="Control" parent="Layer"]
margin_left = 2029.0
margin_top = 368.0
margin_right = 2507.0
margin_bottom = 688.0

[node name="Fundo" type="Sprite" parent="Layer/Tutorial6"]
modulate = Color( 0.196078, 0.192157, 0.192157, 1 )
scale = Vector2( 30, 20 )
texture = ExtResource( 6 )
centered = false
__meta__ = {
"_edit_lock_": true
}

[node name="Texto" type="Label" parent="Layer/Tutorial6"]
margin_right = 478.0
margin_bottom = 196.0
text = "INIMIGOS:

O sistema imune do hospedeiro enviará celulas de defesa
para te destruir.

Acabe com elas antes que acabem com você."
align = 1
valign = 1
__meta__ = {
"_edit_lock_": true
}

[node name="Continue" type="Button" parent="Layer/Tutorial6"]
margin_left = 200.0
margin_top = 270.0
margin_right = 269.0
margin_bottom = 290.0
text = "Continue"
__meta__ = {
"_edit_lock_": true
}

[node name="Tutorial7" type="Control" parent="Layer"]
margin_left = 2569.0
margin_top = 368.0
margin_right = 3047.0
margin_bottom = 688.0

[node name="Fundo" type="Sprite" parent="Layer/Tutorial7"]
modulate = Color( 0.196078, 0.192157, 0.192157, 1 )
scale = Vector2( 30, 20 )
texture = ExtResource( 6 )
centered = false
__meta__ = {
"_edit_lock_": true
}

[node name="Texto" type="Label" parent="Layer/Tutorial7"]
margin_right = 478.0
margin_bottom = 196.0
text = "INFECÇÃO: 

Seu objetivo é infectar completamente seu hospedeiro. Seus pontos 
de infecção aumentam ao derrotar células de defesa.

 A barra de infecção no canto superior esquerdo mostra seu progresso."
align = 1
valign = 1
__meta__ = {
"_edit_lock_": true
}

[node name="Continue" type="Button" parent="Layer/Tutorial7"]
margin_left = 200.0
margin_top = 270.0
margin_right = 269.0
margin_bottom = 290.0
text = "Continue"
__meta__ = {
"_edit_lock_": true
}

[node name="Tutorial8" type="Control" parent="Layer"]
margin_left = 3106.0
margin_top = 368.0
margin_right = 3584.0
margin_bottom = 688.0

[node name="Fundo" type="Sprite" parent="Layer/Tutorial8"]
modulate = Color( 0.196078, 0.192157, 0.192157, 1 )
scale = Vector2( 30, 20 )
texture = ExtResource( 6 )
centered = false
__meta__ = {
"_edit_lock_": true
}

[node name="Texto" type="Label" parent="Layer/Tutorial8"]
margin_right = 478.0
margin_bottom = 196.0
text = "INFECTAR INIMIGOS:

Sendo um vírus, você pode tomar controle de inimigos enfraquecidos.
Inimigos ficam enfraquecidos quando atingem um único ponto de vida

Experimente atirar duas vezes em um Fagócito e então tocar nele."
align = 1
valign = 1
__meta__ = {
"_edit_lock_": true
}

[node name="Continue" type="Button" parent="Layer/Tutorial8"]
margin_left = 200.0
margin_top = 270.0
margin_right = 269.0
margin_bottom = 290.0
text = "Continue"
__meta__ = {
"_edit_lock_": true
}

[node name="Tutorial9" type="Control" parent="Layer"]
margin_left = 1507.0
margin_top = 720.0
margin_right = 1985.0
margin_bottom = 1040.0

[node name="Fundo" type="Sprite" parent="Layer/Tutorial9"]
modulate = Color( 0.196078, 0.192157, 0.192157, 1 )
scale = Vector2( 30, 20 )
texture = ExtResource( 6 )
centered = false
__meta__ = {
"_edit_lock_": true
}

[node name="Texto" type="Label" parent="Layer/Tutorial9"]
margin_right = 478.0
margin_bottom = 196.0
text = "INFECTAR INIMIGOS:

Dependendo do tipo de inimigo que você tomou controle, você
receberá novos tipos de ataque, velocidade de movimento, 
dano de ataque e quantidade de vida.

Experimente seu novo ataque derrotando um Fagócito.
"
align = 1
valign = 1
__meta__ = {
"_edit_lock_": true
}

[node name="Continue" type="Button" parent="Layer/Tutorial9"]
margin_left = 200.0
margin_top = 270.0
margin_right = 269.0
margin_bottom = 290.0
text = "Continue"
__meta__ = {
"_edit_lock_": true
}

[node name="Tutorial10" type="Control" parent="Layer"]
margin_left = 2028.0
margin_top = 723.0
margin_right = 2506.0
margin_bottom = 1043.0

[node name="Fundo" type="Sprite" parent="Layer/Tutorial10"]
modulate = Color( 0.196078, 0.192157, 0.192157, 1 )
scale = Vector2( 30, 20 )
texture = ExtResource( 6 )
centered = false
__meta__ = {
"_edit_lock_": true
}

[node name="Texto" type="Label" parent="Layer/Tutorial10"]
margin_right = 478.0
margin_bottom = 235.0
text = "
INFECTAR INIMIGOS:

Inimigos controlados não duram para sempre, após algum tempo 
eles irão mudar de cor para sinalizar que seu controle está prestes
a acabar. 

Retornar a sua forma de vírus desta forma te recompensa
com alguns pontos de infecção.

Se sua vida chegar a zero enquanto estiver controlando um inimigo,
você será forçado à sua forma de vírus novamente, mas não receberá
os pontos de infecção bonus."
align = 1
valign = 1
__meta__ = {
"_edit_lock_": true
}

[node name="Continue" type="Button" parent="Layer/Tutorial10"]
margin_left = 200.0
margin_top = 270.0
margin_right = 269.0
margin_bottom = 290.0
text = "Continue"
__meta__ = {
"_edit_lock_": true
}

[node name="Tutorial11" type="Control" parent="Layer"]
margin_left = 2575.0
margin_top = 721.0
margin_right = 3053.0
margin_bottom = 1041.0

[node name="Fundo" type="Sprite" parent="Layer/Tutorial11"]
modulate = Color( 0.196078, 0.192157, 0.192157, 1 )
scale = Vector2( 30, 20 )
texture = ExtResource( 6 )
centered = false
__meta__ = {
"_edit_lock_": true
}

[node name="Texto" type="Label" parent="Layer/Tutorial11"]
margin_right = 478.0
margin_bottom = 196.0
text = "INIMIGOS:

Cada inimigo possui um comportamento diferente, análogo à função que
realiza no sistema imune humano. Você pode ler sobre cada inimigo na 
aba \"Ajuda\" no Menu Principal."
align = 1
valign = 1
__meta__ = {
"_edit_lock_": true
}

[node name="Continue" type="Button" parent="Layer/Tutorial11"]
margin_left = 200.0
margin_top = 270.0
margin_right = 269.0
margin_bottom = 290.0
text = "Continue"
__meta__ = {
"_edit_lock_": true
}

[node name="Tutorial12" type="Control" parent="Layer"]
margin_left = 3106.0
margin_top = 723.0
margin_right = 3584.0
margin_bottom = 1043.0

[node name="Fundo" type="Sprite" parent="Layer/Tutorial12"]
modulate = Color( 0.196078, 0.192157, 0.192157, 1 )
scale = Vector2( 30, 20 )
texture = ExtResource( 6 )
centered = false
__meta__ = {
"_edit_lock_": true
}

[node name="Texto" type="Label" parent="Layer/Tutorial12"]
margin_right = 478.0
margin_bottom = 196.0
text = "CONTROLES:

Você pode apertar ESC a qualquer momento para pausar o jogo.

Quando estiver satisfeito, pressione ESC e retorne ao Menu Principal."
align = 1
valign = 1
__meta__ = {
"_edit_lock_": true
}

[node name="Continue" type="Button" parent="Layer/Tutorial12"]
margin_left = 200.0
margin_top = 270.0
margin_right = 269.0
margin_bottom = 290.0
text = "Continue"
__meta__ = {
"_edit_lock_": true
}

[node name="Audio_Menu" type="VBoxContainer" parent="Layer"]
margin_left = 1225.0
margin_top = 882.0
margin_right = 1352.0
margin_bottom = 978.0

[node name="Fundo" type="Sprite" parent="Layer/Audio_Menu"]
modulate = Color( 0.196078, 0.192157, 0.192157, 1 )
position = Vector2( -6.99997, -9.99996 )
scale = Vector2( 8.8125, 7.625 )
texture = ExtResource( 6 )
centered = false

[node name="Music" type="Label" parent="Layer/Audio_Menu"]
margin_right = 127.0
margin_bottom = 14.0
text = "Music"
align = 1
valign = 1

[node name="MusicSlider" type="HSlider" parent="Layer/Audio_Menu"]
margin_top = 18.0
margin_right = 127.0
margin_bottom = 34.0
min_value = 0.001
max_value = 1.0
step = 0.05
value = 1.0

[node name="Effects" type="Label" parent="Layer/Audio_Menu"]
margin_top = 38.0
margin_right = 127.0
margin_bottom = 52.0
text = "Efeitos Sonoros"
align = 1
valign = 1

[node name="EffectsSlider" type="HSlider" parent="Layer/Audio_Menu"]
margin_top = 56.0
margin_right = 127.0
margin_bottom = 72.0
min_value = 0.001
max_value = 1.0
step = 0.05
value = 1.0

[node name="Return" type="Button" parent="Layer/Audio_Menu"]
margin_top = 76.0
margin_right = 127.0
margin_bottom = 96.0
text = "Return"

[connection signal="timeout" from="Enemy_spawn_timer" to="." method="_on_Enemy_spawn_timer_timeout"]
[connection signal="timeout" from="Immunity_timer" to="." method="_on_Immunity_timer_timeout"]
[connection signal="timeout" from="Tutorial_timer" to="." method="_on_Tutorial_timer_timeout"]
[connection signal="ready" from="UI/Control/Health" to="." method="_on_Health_ready"]
[connection signal="ready" from="UI/Control/ImmunityPBar" to="." method="_on_ImmunityPBar_ready"]
[connection signal="ready" from="UI/Control/InfectionPBar" to="." method="_on_InfectionPBar_ready"]
[connection signal="ready" from="UI/Control/Immunity" to="." method="_on_Immunity_ready"]
[connection signal="ready" from="UI/Control/Infection" to="." method="_on_Infection_ready"]
[connection signal="ready" from="Layer/Pause_Menu" to="." method="_on_Pause_Menu_ready"]
[connection signal="pressed" from="Layer/Pause_Menu/Unpause" to="." method="_on_Unpause_pressed"]
[connection signal="ready" from="Layer/Pause_Menu/Unpause" to="." method="_on_Unpause_ready"]
[connection signal="pressed" from="Layer/Pause_Menu/Audio" to="." method="_on_Audio_pressed"]
[connection signal="ready" from="Layer/Pause_Menu/Audio" to="." method="_on_Audio_ready"]
[connection signal="pressed" from="Layer/Pause_Menu/Menu" to="." method="_on_Menu_pressed"]
[connection signal="ready" from="Layer/Pause_Menu/Menu" to="." method="_on_Menu_ready"]
[connection signal="pressed" from="Layer/Pause_Menu/Quit" to="." method="_on_Quit_pressed"]
[connection signal="ready" from="Layer/Pause_Menu/Quit" to="." method="_on_Quit_ready"]
[connection signal="ready" from="Layer/Tutorial1" to="." method="_on_Tutorial1_ready"]
[connection signal="pressed" from="Layer/Tutorial1/Continue" to="." method="_on_Continue_pressed"]
[connection signal="ready" from="Layer/Tutorial2" to="." method="_on_Tutorial2_ready"]
[connection signal="pressed" from="Layer/Tutorial2/Continue" to="." method="_on_Continue_pressed"]
[connection signal="ready" from="Layer/Tutorial3" to="." method="_on_Tutorial3_ready"]
[connection signal="pressed" from="Layer/Tutorial3/Continue" to="." method="_on_Continue_pressed"]
[connection signal="ready" from="Layer/Tutorial4" to="." method="_on_Tutorial4_ready"]
[connection signal="pressed" from="Layer/Tutorial4/Continue" to="." method="_on_Continue_pressed"]
[connection signal="ready" from="Layer/Tutorial5" to="." method="_on_Tutorial5_ready"]
[connection signal="pressed" from="Layer/Tutorial5/Continue" to="." method="_on_Continue_pressed"]
[connection signal="ready" from="Layer/Tutorial6" to="." method="_on_Tutorial6_ready"]
[connection signal="pressed" from="Layer/Tutorial6/Continue" to="." method="_on_Continue_pressed"]
[connection signal="ready" from="Layer/Tutorial7" to="." method="_on_Tutorial7_ready"]
[connection signal="pressed" from="Layer/Tutorial7/Continue" to="." method="_on_Continue_pressed"]
[connection signal="ready" from="Layer/Tutorial8" to="." method="_on_Tutorial8_ready"]
[connection signal="pressed" from="Layer/Tutorial8/Continue" to="." method="_on_Continue_pressed"]
[connection signal="ready" from="Layer/Tutorial9" to="." method="_on_Tutorial9_ready"]
[connection signal="pressed" from="Layer/Tutorial9/Continue" to="." method="_on_Continue_pressed"]
[connection signal="ready" from="Layer/Tutorial10" to="." method="_on_Tutorial10_ready"]
[connection signal="pressed" from="Layer/Tutorial10/Continue" to="." method="_on_Continue_pressed"]
[connection signal="ready" from="Layer/Tutorial11" to="." method="_on_Tutorial11_ready"]
[connection signal="pressed" from="Layer/Tutorial11/Continue" to="." method="_on_Continue_pressed"]
[connection signal="ready" from="Layer/Tutorial12" to="." method="_on_Tutorial12_ready"]
[connection signal="pressed" from="Layer/Tutorial12/Continue" to="." method="_on_Continue_pressed"]
[connection signal="ready" from="Layer/Audio_Menu" to="." method="_on_Audio_Menu_ready"]
[connection signal="ready" from="Layer/Audio_Menu/Music" to="." method="_on_Music_ready"]
[connection signal="value_changed" from="Layer/Audio_Menu/MusicSlider" to="." method="_on_MusicSlider_value_changed"]
[connection signal="ready" from="Layer/Audio_Menu/Effects" to="." method="_on_Effects_ready"]
[connection signal="value_changed" from="Layer/Audio_Menu/EffectsSlider" to="." method="_on_EffectsSlider_value_changed"]
[connection signal="pressed" from="Layer/Audio_Menu/Return" to="." method="_on_Return_pressed"]
[connection signal="ready" from="Layer/Audio_Menu/Return" to="." method="_on_Return_ready"]
